# SyntheticDefectGenerator

./: .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: FindOpenCV.cmake.hint
src/: main.cpp
src/camera/: FileCameraModule.cpp  FileCameraModule.h  ICameraModule.h  ILiquidLensController.h  MockCameraModule.cpp  MockCameraModule.h  MockLiquidLensController.h  RealCameraModule.cpp  RealCameraModule.h  RealLiquidLensController.cpp  RealLiquidLensController.h
src/core/defect_gen/: DefectGenerator.cpp  DefectGenerator.h  DefectTypes.h
src/core/depth_map/: DepthMapReconstructor.cpp  DepthMapReconstructor.h
src/core/focal_stack/: FocalStackProcessor.cpp  FocalStackProcessor.h
src/core/image_registration/: ImageRegistrator.cpp  ImageRegistrator.h
src/gpu/kernels/: sharpness_kernel.cu
src/ui/: MainWindow.cpp  MainWindow.h  MainWindow.ui
